--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Dashingjs by MikhaelGerbet</title>
+    <title>DashingJS</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Dashingjs</h1>
+        <h1>DashingJS</h1>
         <h2>DashingJS is a open source AngularJS based framework that lets you build beautiful dashboards.</h2>
         <a href="https://github.com/MikhaelGerbet/dashingJs" class="button"><small>View project on</small> GitHub</a>
       </div>
