--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h1><a href="http://www.youtube.com/embed/9No-FiEInLA?autoplay=1&wmode=opaque&fs=1" class="youtube-media"><i class="fa fa-play-circle-o"></i> Watch the Video</a></h1>
+                <h1>
+                    <!--<a href="http://www.youtube.com/embed/9No-FiEInLA?autoplay=1&wmode=opaque&fs=1" class="youtube-media">-->
+                        <i class="fa fa-play-circle-o"></i> Watch the Video
+                    <small>< comming soon /></small>
+                    <!--</a>-->
+                </h1>
             </div>
         </div>
     </div>
@@ -165,36 +170,16 @@
         <div class="texture-overlay"></div>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-9">
                     <div class="device wp3">
-                        <div class="device-content">
-                            <div class="showcase-slider">
-                                <ul class="slides" id="showcaseSlider">
-                                    <li>
-                                        <img src="img/screen1.jpg" alt="Device Content Image">
-                                    </li>
-                                    <li>
-                                        <img src="img/screen2.jpg" alt="Device Content Image">
-                                    </li>
-                                    <li>
-                                        <img src="img/screen3.jpg" alt="Device Content Image">
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <h1>Showcase your Product or Service</h1>
+                <div class="col-md-3">
+                    <h1>Your new best friend</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-                    <blockquote class="team-quote">
-                        <div class="avatar"><img src="img/avatar.png" alt="User Avatar"></div>
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc." - Peter Finlan</p>
-                        <div class="logo-quote">
-                            <a href="http://tympanus.net/codrops/"><img src="img/codrops-logo.png" alt="Codrops Logo"></a>
-                        </div>
-                    </blockquote>
-                    <a href="http://tympanus.net/codrops/?p=22554" class="download-btn">Download! <i class="fa fa-download"></i></a>
+
+                    <a href="https://github.com/MikhaelGerbet/dashingJs" class="download-btn">Install now! <i class="fa fa-download"></i></a>
                 </div>
             </div>
         </div>
