--- a/app/index.html
+++ b/app/index.html
@@ -70,9 +70,9 @@
 
 <script src="config.js"></script>
 <!-- build:js scripts/main.js -->
-<script src="scripts/app.js"></script>
-<script src="scripts/directive-flip.js"></script>
-<script src="scripts/dashbord.js"></script>
+<script src="app.js"></script>
+<script src="directives/directive-flip.js"></script>
+<script src="dashboard/dashboard.js"></script>
 <!-- endbuild -->
 <script src="jobs.js"></script>
 </body>
