--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="dashingApp" class="no-js">
 <head>
     <meta charset="utf-8">
-    <title>DashingJs</title>
+    <title>DashingJS</title>
     <meta name="description" content="Dashing is a AngularJS based framework that lets you build beautiful dashboards. Inspired by dashing.io">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,12 +32,13 @@
 <div ng-view></div>
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='https://www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X');ga('send','pageview');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-86544526-2', 'auto');
+    ga('send', 'pageview');
 </script>
 
 <!-- build:js scripts/vendor.js -->
