refactoring widgets + tests widget area + doc refactoring

--- a/app/widgets/area/widget.html
+++ b/app/widgets/area/widget.html
@@ -1,7 +1,6 @@
-<div class="dashingJsArea" ng-controller="dashingJsAreaCtrl" >
+<div class="dashingJsArea hide" ng-controller="dashingJsAreaCtrl" >
     <h3 ng-if="title">{{title}}</h3>
     <div class="highcharts-container"></div>
     <h1>{{value}}</h1>
-
     <p class="updatedAt" am-time-ago="updatedAt"></p>
 </div>
