--- a/app/widgets/donut/widget.html
+++ b/app/widgets/donut/widget.html
@@ -1,4 +1,4 @@
-<div class="dashingJsDonut" ng-controller="dashingJsDonutCtrl" >
+<div class="dashingJsDonut hide" ng-controller="dashingJsDonutCtrl" >
     <h3>{{legend}}</h3>
     <div class="donut" ></div>
     <h1>{{value}}</h1>
